@startuml Domain Model
left to right direction

'=== Candidate Aggregate ===
package Candidate_Aggregate{

    Entity Candidate <<Aggregate Root>>{
    }

    Class Email <<Identity>><<Value Object>>{
    }

    Class Password  <<Value Object>>{
        }
    Class Name <<Value Object>> {}
    Class PhoneNumber <<Value Object>> {}


    Candidate --> "1" Email
    Candidate --> "1" Password
    Candidate --> "1" Name
    Candidate --> "1" PhoneNumber
}

'=== JobApplication Aggregate ===
package JobApplication_Aggregate{

    Entity JobApplication <<Aggregate Root>>{
    }



    class JobApplicationState <<Value Object>>{
    }
    Entity JobApplicationFile
    Entity RequirementsScore
    Entity JobApplicationReport



   JobApplication  --> "1…*" JobApplicationFile
   JobApplication  --> "1" RequirementsScore
   JobApplication  --> JobApplicationState
    JobApplication --> "1…*" InterviewModelAnswers
    JobApplication  --> "1" JobApplicationReport

}

Entity RequirementsEvaluation <<Service>>
Entity InterviewModelEvaluation <<Service>>

'=== RequirementSpecifications Aggregate ===
package RequirementSpecifications_Aggregate{
    Entity RequirementSpecifications <<Aggregate Root>>{}
    Class Title <<Identity>><<Value Object>>{}
    Class RequirementSpecificationsResult <<ValueObject>>{}
    Class FileName <<Value Object>>
    RequirementSpecifications -> "1     " RequirementSpecificationsResult
    RequirementSpecifications --> "1" Title
    RequirementSpecifications -> "1" FileName
    RequirementSpecificationsResult -> "0...1" Justification
}

'=== InterviewModel Aggregate ===
package InterviewModel_Aggregate{

    Entity InterviewModel <<Aggregate Root>>{
    }

    Class Title <<Identity>> <<Value Object>>{
    }
    Class FileName <<Value Object>> {}

Class InterviewModelGrade <<Value Object>> {}

    InterviewModel --> "1" Title

    InterviewModel --> "1" FileName

    InterviewModel --> "1" InterviewModelGrade
}



'=== JobOpening Aggregate ===
package JobOpening_Aggregate{
    Entity JobOpening <<Aggregate Root>>{}
    Class JobReference <<Identity>><<ValueObject>>
    Class JobTitle <<Value Object>>{}
    Enum ContractType <<Enum>><<Value Object>> {}
    Enum WorkingMode <<Enum>><<Value Object>> {}
    Class Address <<Value Object>>{}
    Class NumberVacancies <<Value Object>>{}
    Class Description <<Value Object>> {}
    Entity RecruitmentProcess <<Aggregate Root>>{
    }
    Enum Phases<<ValueObject>>{}
    Class Phase <<Value Object>> {}
    Class Period <<Value Object>> {}
    RecruitmentProcess --> "4...5" Phase
    Phase -->  "1" Phases
    Phase  --> "1" Period
    JobOpening --> "1" JobReference
    JobOpening --> "1" JobTitle
    JobOpening --> "1" ContractType
    JobOpening --> "1" WorkingMode
    JobOpening --> "1" Address
    JobOpening --> "1" NumberVacancies
    JobOpening --> "1" Description
}

'=== Company/Customer Aggregate ===
package Customer_Aggregate{

    Entity Customer <<Aggregate Root>>{
    }

    Class Email <<Identity>> <<Value Object>>{
    }
    Class Password <<Value Object>>{
    }
    Class Name <<Value Object>>{}
    Class Address <<Value Object>>{
        }
    Class Acronym <<Value Object>>{
    }

    Customer --> "1   " Email
    Customer --> "1" Password
    Customer --> "1" Address
    Customer --> "1" Acronym
    Customer --> "1" Name
}

RequirementsScore <.. RequirementsEvaluation
InterviewModelAnswers <.. InterviewModelEvaluation
InterviewModelScore <.. InterviewModelEvaluation
JobApplication  --> "1" JobOpening
JobApplication  --> "1" Candidate
JobOpening --> "0...1     " InterviewModel
JobOpening --> "1       " RecruitmentProcess
JobOpening --> "1   " Customer
JobOpening --> "1" RequirementSpecifications

@enduml